# RNAinsecta

./: README.md  requirements.txt  results.csv  test.ipynb  test.py
ML_models/: RF.pkl  SVM.pkl
dataset/: comp_data_labels.csv  insect_miRNA.fasta  neg.fold  neg.foldstats.csv  neg.foldtrip.csv  pos.fold  pos.foldstats.csv  pos.foldtrip.csv
triplet_scripts/: 3_step_triplet_coding_for_queries.pl
web/: NC_051385.1  app.py  miranda.py  mirbase_ann.csv  mirbase_ann_BCP.csv  parent.csv  parent_mirna.csv  res1.txt  rna.ps  rnafold.txt  stats.csv  stats.pl  tarRNA.fasta  target.py  temp1.fasta  test.py  trip_bcp.pl  triplet.csv
web/DM_tar/: DM_2R.fasta  DM_3L.fasta  DM_3R.fasta  DM_X.fasta  temp1.fasta
web/miRanda-1.0b/miRanda-1.0b/: AUTHORS  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  config.cache  config.h  config.h.in  config.status  configure  configure.in  makebindist.sh
web/miRanda-1.0b/miRanda-1.0b/RNAlib/: Makefile  Makefile.am  Makefile.in
web/miRanda-1.0b/miRanda-1.0b/RNAlib/H/: Makefile  Makefile.am  Makefile.in
web/miRanda-1.0b/miRanda-1.0b/examples/: bantam_stRNA.fasta  hid_UTR.fasta
web/miRanda-1.0b/miRanda-1.0b/man/: Makefile  Makefile.am  Makefile.in  miranda.html  miranda.ps
web/miRanda-1.0b/miRanda-1.0b/man/man1/: miranda.1
web/miRanda-1.0b/miRanda-1.0b/src/: Makefile  Makefile.am  Makefile.in  matrix.c  miranda.c  miranda.h  output.c  scan.c  scmatrix.h  seqio.c  statistics.c  swat.c  thermo.c  utils.c
web/static/: input.csv  plot.js  plot01.js  rna.ps  style.css  target.js
web/targets/: SEQ_bm.fasta  bm_tar.bed  bm_tar_IDmir.bed  bm_tar_rgx.gff3  bmori_mir.fasta  bmori_mir1.fasta  bmori_tar.gff3  bmori_tar_ID.fasta  bmori_tar_IDre.gff3  foo.bed
web/targets/DM/: DM_2L.fasta  DM_4.fasta  DM_REF_TAR.fasta  DM_mRNA_tar.fasta  DM_ref.fasta  FlyBase_GPDQCL.fasta  dme_MTI.xls  flybaseID.txt  flybase_nodup.txt  get_header_fl.pl  header.txt  parent.csv  parent.txt  result_miranda.out  targetlist  temp1.fasta  testref.fasta  xml
web/targets/DM/tar/: DM_target_CDS.fasta  FlyBase_FYHEVO.fasta  FlyBase_MFQAAY.fasta  FlyBase_UVCNYS.fasta  genome annotation .txt
web/templates/: about.html  home.html  home0.html  layout.html  mirtar.html  predict (copy).html  predict.html  predict002.html  predict002_batch.html  predict01.html  style.css  tarno.html  test.html
